# Climate_Stack

./: .gitignore  README_INTEGRATION.md  climate_data_pipeline.py  main.py  pest_profiles.json  pestcast-prd-clean.md  pestcast-prd.md
backend/: package-lock.json  package.json
backend/src/: constants.ts  seed.ts  types.ts
ml/: .gitignore  benchmark.py  benchmark_report.json  data_prep.py  evaluate.py  evaluation_results.json  labels.json  pest_classification_colab.ipynb  pyproject.toml  quantization_report.json  quantize.py  train.py
ml/configs/: train_config.yaml
ml/scripts/: benchmark.py  export_tflite.py  prepare_dataset.py  train.py
mobile/src/mocks/: mockData.ts  types.ts
pestcast-app/: App.tsx  app.json  package-lock.json  package.json
pestcast-app/src/: config.ts
pestcast-app/src/components/: AtRiskCrops.tsx  CameraViewfinder.tsx
pestcast-app/src/hooks/: useClassifier.ts  useLocation.ts
pestcast-app/src/screens/: MapDashboard.tsx  PestCaptureScreen.tsx  SettingsScreen.tsx
pestcast-app/src/services/: noaa.ts  offlineQueue.ts  supabase.ts  syncService.ts
pestcast-app/src/types/: index.ts  react-native-fast-tflite.d.ts
supabase/: config.toml
supabase/functions/_shared/: supabase-client.ts
supabase/functions/predict/: index.ts
supabase/migrations/: 20260213000001_create_sightings.sql  20260213000002_enable_rls.sql  20260213000003_enable_realtime.sql  20260213000004_create_farmers.sql  20260213000005_create_storage.sql
