[project]
name = "pestcast-ml"
version = "0.1.0"
description = "PestCast ML pipeline — on-device pest classification model training, quantization, and benchmarking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tf2onnx>=1.8.4",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
